reduced page size

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ line-height: 0.5;
 <body>
 <div class="topnav">
   <a class="active" href="index.html">HOME</a>
+   <a href="publications.html">PUBLICATIONS</a>
 
 </div>
 
