--- a/publications.html
+++ b/publications.html
@@ -145,7 +145,6 @@ padding: 0px 20px 0px 0px;
 
 <div class="topnav">
   <a href="index.html">HOME</a>
-  <a href="About.html">ABOUT</a>
   <a class="active" href="publications.html">PUBLICATIONS</a>
 
 </div>  
@@ -154,6 +153,23 @@ padding: 0px 20px 0px 0px;
 <div class="col-9 header">
 <h3><span class="line-center">Journals</span></h3>
 </div>
+	<a class="pictures"><img src="img/sympathy.png" width="100" height="50"></a>	   
+    <p class="col-9"> Higgins, D., Zibrek, K., Cabral, J., Egan, D., McDonnell, R. (2022). Sympathy for the digital: Influence of synthetic voice on affinity, social presence and empathy for photorealistic virtual humans. In Computers Graphics, 104, 116-128.</p>
+    <p><a class="pdf" href="https://www.sciencedirect.com/science/article/pii/S0097849322000474">LINK</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
+
+	<a class="pictures"><img src="img/interaction.png" width="100" height="50"></a>	   
+    <p class="col-9"> Colas, A., van Toll, W., Zibrek, K., Hoyet, L., Olivier, A. H.., Pettré, J., (2021). Interaction Fields: Intuitive Sketch-based Steering Behaviors for Crowd Simulation. In Computer Graphics Forum, 41(2), 521-534.</p>
+    <p><a class="pdf" href="https://hal.inria.fr/hal-03642462/file/InteractionField_Eurographics.pdf">LINK</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
+
+	<a class="pictures"><img src="img/frontpsychol.png" width="100" height="50"></a>	   
+    <p class="col-9"> Sterna, R., Zibrek, K. (2021). Psychology in Virtual Reality: Toward a Validated Measure of Social Presence. Frontiers in Psychology, 12.</p>
+    <p><a class="pdf" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8520984/">LINK</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
 
 	<a class="pictures"><img src="img/CG_blend.jpg" width="100" height="50"></a>	   
     <p class="col-9"> McDonnell, R., Zibrek, K., Carrigan, E., & Dahyot, R. (2021). Model for predicting perception of facial action unit activation using virtual humans. Computers & Graphics, 100, 81-92.</p>
@@ -196,9 +212,21 @@ padding: 0px 20px 0px 0px;
 	<h3><span class="line-center">Conferences</span></h3>
 	</div>
 	
-	<a class="pictures"><img src="img/Observer.png" width="100" height="50"></a>	   
-    <p class="col-9">Raimbaud, P., Jovane, A., Zibrek, K., Pacchierotti, C., Christie, M., Hoyet, L., ... & Olivier, A. H. (2021, September). Reactive Virtual Agents: A Viewpoint-Driven Approach for Bodily Nonverbal Communication. In Proceedings of the 21th ACM International Conference on Intelligent Virtual Agents (pp. 164-166).</p>
+	<a class="pictures"><img src="img/stare.png" width="100" height="50"></a>	   
+    <p class="col-9"> Raimbaud, P., Jovane, A., Zibrek, K., Pacchierotti, C., Christie, M., Hoyet, L., Pettré, J. Olivier, A. H. (2022). The Stare-in-the-Crowd Effect in Virtual Reality. In 2022 IEEE Conference on Virtual Reality and 3D User Interfaces (VR), 281-290.</p>
+	<a class="pdf" href="https://hal.archives-ouvertes.fr/hal-03581916/file/2022011865.pdf">PDF</a></p>
+	
+	<a class="pictures"><img src="img/SyntVoice.png" width="100" height="50"></a>	   
+    <p class="col-9"> Zibrek, K., Cabral, J., McDonnell, R. (2021). Does Synthetic Voice alter Social Response to a Photorealistic Character in Virtual Reality?. In Motion, Interaction and Games, 1-6.</p>
+	<a class="pdf" href="https://dl.acm.org/doi/pdf/10.1145/3487983.3488296">PDF</a></p>
+	
+	<a class="pictures"><img src="img/Iana_paper.png" width="100" height="50"></a>	   
+    <p class="col-9">Podkosova, I., Zibrek, K., Pettré, J., Hoyet, L., Olivier, A. H. (2021). Exploring behaviour towards avatars and agents in immersive virtual environments with mixed-agency interactions. In 2021 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), 140-143.</p>
 	<a class="pdf" href="https://dl.acm.org/doi/pdf/10.1145/3472306.3478351">PDF</a></p>
+	
+	<a class="pictures"><img src="img/Observer.png" width="100" height="50"></a>	   
+    <p class="col-9">Raimbaud, P., Jovane, A., Zibrek, K., Pacchierotti, C., Christie, M., Hoyet, L., ... & Olivier, A. H. (2021). Reactive Virtual Agents: A Viewpoint-Driven Approach for Bodily Nonverbal Communication. In Proceedings of the 21th ACM International Conference on Intelligent Virtual Agents (pp. 164-166).</p>
+	<a class="pdf" href="http://people.rennes.inria.fr/Ludovic.Hoyet/Documents/Articles/2021_Podkosova.pdf">PDF</a></p>
 	
 	<a class="pictures"><img src="img/SettingVR.png" width="100" height="50"></a>	   
     <p class="col-9">Duverné, T., Rougnant, T., Le Yondre, F., Berton, F., Bruneau, J., Zibrek, K., Pettré, J., Hoyet, L., Olivier, AH. (2020). Effect of Social Settings on Proxemics During Social Interactions in Real and Virtual Conditions. International Conference on Virtual Reality and Augmented Reality, 3-19.</p>
@@ -245,6 +273,10 @@ padding: 0px 20px 0px 0px;
 	<div class="col-9 header">
 	<h3><span class="line-center">Posters and Workshops</span></h3>
 	</div>
+	
+	<a class="pictures"><img src="img/GenderProx.png" width="100" height="50"></a>	   
+    <p class="col-9">Zibrek, K., Niay, B., Olivier, A. H., Pettré, J., Hoyet, L., Mcdonnell, R. (2022). Proximity in VR: The Importance of Character Attractiveness and Participant Gender. In 2022 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), 672-673.</p>
+	<a class="pdf" href="https://hal.inria.fr/hal-03584119/file/IEEEVR22_1518.pdf">PDF</a></p>
 
 	<a class="pictures"><img src="img/Iana.png" width="100" height="50"></a>	   
     <p class="col-9">Podkosova, I., Zibrek, K., Pettré, J., Hoyet, L., & Olivier, A. H. (2021). Exploring behaviour towards avatars and agents in immersive virtual environments with mixed-agency interactions. In 2021 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW) (pp. 140-143). IEEE.</p>
