added hidden pdf

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ line-height: 0.5;
 	<h5></h5>
     <p> I am a MSCA-IF Postdoctoral Researcher at Inria Rennes, France. My main area of investigation is the perception of virtual humans in Virtual Reality. I use the methods from psychology and computer science to understand the impact of virtual human on users' subjective and behavioral response.</p>
 
-	<p>See the ForEVR project page:<a class="pdf" href=" https://sites.google.com/view/katjazibrek">LINK</a></p>
+	<p><a class="pdf" href=" https://sites.google.com/view/katjazibrek">See the ForEVR project page</a></p>
 	
 	
 	<h4>Contact</h4>
