--- a/InPress.html
+++ b/InPress.html
@@ -155,7 +155,7 @@ padding: 0px 20px 0px 0px;
 </div>
 	<!--<a class="pictures"><img src="img/sympathy.png" width="100" height="50"></a>-->	   
     <p class="col-9"> Patotskaya, Y., Olivier, A. H., Hoyet, L., Pettré, J. and Zibrek, K. (2022). Avoiding virtual humans in a constrained environment: exploration of novel behavioral measures. Computers and Graphics (In press).</p>
-    <p><a class="pdf" href="C:\Users\kzibrek\Documents\GitHub\Cathrin7.github.io\Pages\C_G2022_Proximity_and_Personality.pdf">PDF</a>
+    <p><a class="pdf" src="Pages/C_G2022_Proximity_and_Personality.pdf">PDF</a>
     <!--<a class="pdf" href="">Video</a>-->
     </p>
 
@@ -163,7 +163,7 @@ padding: 0px 20px 0px 0px;
 
 </div>
 
-<div class="footer">
+
    
 </div>
 
