--- a/InPress.html
+++ b/InPress.html
@@ -159,7 +159,10 @@ padding: 0px 20px 0px 0px;
     <!--<a class="pdf" href="">Video</a>-->
     </p>
 
-	
+	<p class="col-9"> Zibrek, K. (2017). Evaluating the Perception of Virtual Characters by Manipulating Components of Their Physical Appearance. PhD Thesis.</p>
+    <p><a class="pdf" href="img/Thesis_Zibrek.pdf">PDF</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
 
 </div>
 
