--- a/publications.html
+++ b/publications.html
@@ -153,6 +153,19 @@ padding: 0px 20px 0px 0px;
 <div class="col-9 header">
 <h3><span class="line-center">Journals</span></h3>
 </div>
+
+	<a class="pictures"><img src="img/metro.png" width="100" height="50"></a>	   
+    <p class="col-9"> Patotskaya, Y., Hoyet, L., Olivier, A. H., Pettré, J., Zibrek, K.(2023). Avoiding virtual humans in a constrained environment: Exploration of novel behavioural measures. In Computers Graphics, In Press.</p>
+    <p><a class="pdf" href="https://www.sciencedirect.com/science/article/pii/S009784932300002X">LINK</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
+	
+	<a class="pictures"><img src="img/warping.png" width="100" height="50"></a>	   
+    <p class="col-9"> Jovane, A., Raimbaud, P.,Zibrek, K., Pacchierotti, C., Christie, M., Hoyet, L., Olivier, A. H., Pettré, J. (2023). Warping character animations using visual motion features. In Computers Graphics, 110, 38-48.</p>
+    <p><a class="pdf" href="https://www.sciencedirect.com/science/article/pii/S0097849322002023">LINK</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
+
 	<a class="pictures"><img src="img/sympathy.png" width="100" height="50"></a>	   
     <p class="col-9"> Higgins, D., Zibrek, K., Cabral, J., Egan, D., McDonnell, R. (2022). Sympathy for the digital: Influence of synthetic voice on affinity, social presence and empathy for photorealistic virtual humans. In Computers Graphics, 104, 116-128.</p>
     <p><a class="pdf" href="https://www.sciencedirect.com/science/article/pii/S0097849322000474">LINK</a>
