--- a/publications.html
+++ b/publications.html
@@ -156,7 +156,7 @@ padding: 0px 20px 0px 0px;
 
 	<a class="pictures"><img src="img/metro.png" width="100" height="50"></a>	   
     <p class="col-9"> Patotskaya, Y., Hoyet, L., Olivier, A. H., Pettré, J., Zibrek, K.(2023). Avoiding virtual humans in a constrained environment: Exploration of novel behavioural measures. In Computers and Graphics, In Press.</p>
-    <p><a class="pdf" href="https://www.sciencedirect.com/science/article/pii/S009784932300002X">LINK</a>
+    <p><a class="pdf" href="img/C_G2022.pdf">PDF</a>
     <!--<a class="pdf" href="">Video</a>-->
     </p>
 	
