--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ line-height: 0.5;
 	<a class="picture"><img src="img/me5.png" width="225" height="246"></a>
     <h4>Dr. Katja Zibrek</h4>
 	<h5></h5>
-    <p> I am a MSCA-IF Postdoctoral Researcher at Inria Rennes, France. My main area of investigation is the perception of virtual humans in Virtual Reality. I use the methods from psychology and computer science to understand the impact of virtual human on users' subjective and behavioral response.</p>
+    <p> I am an ISFP Researcher at Inria Rennes, France. My main area of investigation is the perception of virtual humans in Virtual Reality. I use the methods from psychology and computer science to understand the impact of virtual human on users' subjective and behavioral response.</p>
 
 	<p><a class="pdf" href=" https://sites.google.com/view/katjazibrek">See the ForEVR project page</a></p>
 	
@@ -172,7 +172,12 @@ line-height: 0.5;
 		<th>Institution</th>
 	</tr>
 	<tr>
-		<td>2021 - </td>
+		<td>2023 - </td>
+		<td>ISFP - Starting Faculty Position at Inria</td>
+		<td>Inria, Rennes, France</td>
+	</tr>
+	<tr>
+		<td>2021 - 2023</td>
 		<td>MSCA-IF Postdoctoral Researcher: project ForEVR</td>
 		<td>Inria, Rennes, France</td>
 	</tr>
